// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/env .getConfig(env) supports GitHub custom endpoint 1`] = `
Object {
  "endpoint": "a ghe endpoint",
  "endpoints": Array [],
}
`;

exports[`config/env .getConfig(env) supports GitHub custom endpoint and github.com 1`] = `
Object {
  "endpoint": "a ghe endpoint",
  "endpoints": Array [
    Object {
      "platform": "github",
      "token": "a github.com token",
    },
    Object {
      "default": true,
      "endpoint": "a ghe endpoint",
      "platform": "github",
      "token": "a ghe token",
    },
  ],
}
`;

exports[`config/env .getConfig(env) supports GitHub custom endpoint and github.com and gitlab.com 1`] = `
Object {
  "endpoint": "a ghe endpoint",
  "endpoints": Array [
    Object {
      "platform": "github",
      "token": "a github.com token",
    },
    Object {
      "default": true,
      "endpoint": "a ghe endpoint",
      "platform": "github",
      "token": "a ghe token",
    },
    Object {
      "endpoint": undefined,
      "platform": "gitlab",
      "token": "a gitlab token",
    },
  ],
}
`;

exports[`config/env .getConfig(env) supports GitHub token 1`] = `
Object {
  "endpoints": Array [
    Object {
      "default": true,
      "endpoint": undefined,
      "platform": "github",
      "token": "github.com token",
    },
  ],
}
`;

exports[`config/env .getConfig(env) supports GitLab custom endpoint 1`] = `
Object {
  "endpoint": "a gitlab endpoint",
  "endpoints": Array [
    Object {
      "endpoint": "a gitlab endpoint",
      "platform": "gitlab",
      "token": "a gitlab token",
    },
  ],
  "platform": "gitlab",
}
`;

exports[`config/env .getConfig(env) supports GitLab token 1`] = `
Object {
  "endpoint": undefined,
  "endpoints": Array [
    Object {
      "endpoint": undefined,
      "platform": "gitlab",
      "token": "a gitlab.com token",
    },
  ],
  "platform": "gitlab",
}
`;

exports[`config/env .getConfig(env) supports VSTS 1`] = `
Object {
  "endpoint": "vsts",
  "endpoints": Array [
    Object {
      "endpoint": "a vsts endpoint",
      "platform": "vsts",
      "token": "a vsts token",
    },
  ],
  "platform": "vsts",
}
`;
